Use plural form for endpoints

--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
                     </section>
                     <section>
                         <h2>Event Schedule</h2>
-                        <p><a href="/event/list">View all events...</a></p>
+                        <p><a href="/events">View all events...</a></p>
                     </section>
                     <section>
                         <h2>Meet the Clubs</h2>
@@ -48,22 +48,22 @@
                         <p>
                             The Programmng Competition Society is...
                         </p>
-                        <p><a href="/club/pcs">See more...</a></p>
+                        <p><a href="/clubs/pcs">See more...</a></p>
                         <h3>UCC</h3>
                         <p>
                             The University Computer Club Inc. is...
                         </p>
-                        <p><a href="/club/ucc">See more...</a></p>
+                        <p><a href="/clubs/ucc">See more...</a></p>
                         <h3>Unigames</h3>
                         <p>
                             Unigames is...
                         </p>
-                        <p><a href="/club/unigames">See more...</a></p>
+                        <p><a href="/clubs/unigames">See more...</a></p>
                         <h3>Unisfa</h3>
                         <p>
                             Unisfa is...
                         </p>
-                        <p><a href="/club/unisfa">See more...</a></p>
+                        <p><a href="/clubs/unisfa">See more...</a></p>
                     </section>
                     <section>
                         <p><a href="/">Go back...</a></p>
