--- a/index.html
+++ b/index.html
@@ -49,17 +49,17 @@
                         <h3>Right Now</h3>
                         <div class="multi-table">
                             <div class="multi-row">
-                                <a href="/event/d_d_oneshot">D&D Oneshot</a>
+                                <a href="/events/d_d_oneshot">D&D Oneshot</a>
                                 <span>Unigames</span>
                                 <span>8:30 pm - 9:30 pm</span>
                             </div>
                             <div class="multi-row">
-                                <a href="/event/screencheat">Screencheat</a>
+                                <a href="/events/screencheat">Screencheat</a>
                                 <span>UCC</span>
                                 <span>9:00 pm - 9:30 pm</span>
                             </div>
                             <div class="multi-row">
-                                <a href="/event/really_long">Really Long Event Name to see if things break</a>
+                                <a href="/events/really_long">Really Long Event Name to see if things break</a>
                                 <span>UCC</span>
                                 <span>9:00 pm - 10:00 pm</span>
                             </div>
@@ -67,17 +67,17 @@
                         <h3>Coming Up</h3>
                         <div class="multi-table">
                             <div class="multi-row">
-                                <a href="/event/book_club">Book Club</a>
+                                <a href="/events/book_club">Book Club</a>
                                 <span>Unisfa</span>
                                 <span>9:30 pm - 10:30 pm</span>
                             </div>
                             <div class="multi-row">
-                                <a href="/event/really_long_2">Really Long Event Name to see if things break</a>
+                                <a href="/events/really_long_2">Really Long Event Name to see if things break</a>
                                 <span>UCC</span>
                                 <span>11:00 pm - 12:00 am</span>
                             </div>
                             <div class="multi-row">
-                                <a href="/event/artemis">Artemis</a>
+                                <a href="/events/artemis">Artemis</a>
                                 <span>UCC, Unigames, Unisfa</span>
                                 <span>9:45 pm - 10:30 pm</span>
                             </div>
@@ -85,15 +85,15 @@
                         <h3>All Night Long</h3>
                         <div class="multi-table">
                             <div class="multi-row">
-                                <a href="/event/minecraft">Minecraft with Friends</a>
+                                <a href="/events/minecraft">Minecraft with Friends</a>
                                 <span>UCC, Unigames, Unisfa</span>
                             </div>
                             <div class="multi-row">
-                                <a href="/event/pcs_contest">Programming unContest</a>
+                                <a href="/events/pcs_contest">Programming unContest</a>
                                 <span>PCS</span>
                             </div>
                         </div>
-                        <p><a href="/event/list">More events...</a></p>
+                        <p><a href="/events">More events...</a></p>
                     </section>
                     <section>
                         <h2>Top Donors</h2>
