Feature donation total on all pages

--- a/about.html
+++ b/about.html
@@ -25,6 +25,11 @@
             <div class="edge-padding">
                 <main>
                     <section>
+                        <p id="donation-total">
+                            <strong>$123.45</strong> raised so far. Keep up the good work everyone!
+                        </p>
+                    </section>
+                    <section>
                         <h1>Charity <sup>un</sup>Vigil Goes Online in 2020!</h1>
                         <p>
                             Each year, the clubs of Cameron Hall band themselves together for a celebration
