Format event info differently

--- a/events/index.html
+++ b/events/index.html
@@ -41,7 +41,7 @@
                     <section>
                         <h3>D&D Oneshot</h3>
                         <div class="event-info">
-                            <span>Unigames</span>
+                            <span>Unigames</span> &mdash;
                             <span>8:30 pm - 9:30 pm</span>
                         </div>
                         <p>
@@ -52,7 +52,7 @@
                     <section>
                         <h3>Screencheat</h3>
                         <div class="event-info">
-                            <span>UCC</span>
+                            <span>UCC</span> &mdash;
                             <span>9:00 pm - 9:30 pm</span>
                         </div>
                         <p>
@@ -63,7 +63,7 @@
                     <section>
                         <h3>Really Long Event Name to see if things break</h3>
                         <div class="event-info">
-                            <span>UCC</span>
+                            <span>UCC</span> &mdash;
                             <span>9:00 pm - 10:00 pm</span>
                         </div>
                         <p>
@@ -77,7 +77,7 @@
                      <section>
                         <h3>Book Club</h3>
                         <div class="event-info">
-                            <span>Unisfa</span>
+                            <span>Unisfa</span> &mdash;
                             <span>9:30 pm - 10:30 pm</span>
                         </div>
                         <p>
@@ -88,7 +88,7 @@
                      <section>
                         <h3>Really Long Event Name to see if things break</h3>
                         <div class="event-info">
-                            <span>UCC</span>
+                            <span>UCC</span> &mdash;
                             <span>9:00 pm - 10:00 pm</span>
                         </div>
                         <p>
@@ -99,7 +99,7 @@
                      <section>
                         <h3>Artemis</h3>
                         <div class="event-info">
-                            <span>UCC, Unigames, Unisfa</span>
+                            <span>UCC, Unigames, Unisfa</span> &mdash;
                             <span>9:45 pm - 10:30 pm</span>
                         </div>
                         <p>
@@ -109,9 +109,6 @@
                     </section>
                     <section>
                         <h2>Past Events</h2>
-                    </section>
-                    <section>
-                        <h3>An event</h3>
                     </section>
                     <section>
                         <p><a href="/">Go back...</a></p>
