Move /events/ to /events/list

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                                 <span>PCS</span>
                             </div>
                         </div>
-                        <p><a href="/events">More events...</a></p>
+                        <p><a href="/events/list">More events...</a></p>
                     </section>
                     <section>
                         <h2>Top Donors</h2>
