--- a/about.html
+++ b/about.html
@@ -45,7 +45,7 @@
                     </section>
                     <section>
                         <h2>Event Schedule</h2>
-                        <p><a href="/events">View all events...</a></p>
+                        <p><a href="/events/list">View all events...</a></p>
                     </section>
                     <section>
                         <h2>Meet the Clubs</h2>
