Add 'raised so far' to event page

--- a/events/d_d_oneshot.html
+++ b/events/d_d_oneshot.html
@@ -36,9 +36,16 @@
                                 <button class="button-good">Donate to this event!</button>
                             </a>
                         </div>
-                        <p><strong>Organizer:</strong> Unigames</p>
-                        <p><em>Start:</em> 8:30 pm</p>
-                        <p><em>End:</em> 9:30 pm</p>
+                        <div class="content-columns">
+                            <div>
+                                <p><strong>Organizer:</strong> Unigames</p>
+                                <p><strong>Raised so far:</strong> $123.45</p>
+                            </div>
+                            <div>
+                                <p><em>Start:</em> 8:30 pm</p>
+                                <p><em>End:</em> 9:30 pm</p>
+                            </div>
+                    </div>
                     </section>
                     <section>
                         <h2>Event Description</h2>
