Add go back link on event page

--- a/events/d_d_oneshot.html
+++ b/events/d_d_oneshot.html
@@ -53,6 +53,9 @@
                              Let's play some Dungeons & Dragons!
                         </p>
                     </section>
+                    <section>
+                        <p><a href="/">Go back...</a></p>
+                    </section>
                 </main>
                 <footer>
                     <div id="footer-content">
