Auto-scale logo on narrow devices

--- a/clubs/ucc.html
+++ b/clubs/ucc.html
@@ -35,7 +35,9 @@
                                 <h1>University Computer Club</h1>
                                 <p><strong>Raised so far:</strong> $666.66</p>
                             </div>
-                            <img src="/static/logos/ucc.svg" alt="UCC Logo" class="logo">
+                            <div class="logo-container">
+                                <img src="/static/logos/ucc.svg" alt="UCC Logo" class="logo">
+                            </div>
                         </div>
                         <p>
                             Founded in 1974, UCC is...
