Fix top space above logo

--- a/clubs/ucc.html
+++ b/clubs/ucc.html
@@ -29,7 +29,7 @@
                             <strong>$123.45</strong> raised so far. Keep up the good work everyone!
                         </p>
                     </section>
-                    <section>
+                    <section class="club-title">
                         <div class="content-columns">
                             <div>
                                 <h1>University Computer Club</h1>
