Chain 'Go back...' in leaderboards

--- a/leaderboard/by_attendee.html
+++ b/leaderboard/by_attendee.html
@@ -47,7 +47,7 @@
                         </div>
                     </section>
                     <section>
-                        <p><a href="/">Go back...</a></p>
+                        <p><a href="/leaderboard/">Go back...</a></p>
                     </section>
                 </main>
                 <footer>
