--- a/leaderboard/by_club.html
+++ b/leaderboard/by_club.html
@@ -51,7 +51,7 @@
                         </div>
                     </section>
                     <section>
-                        <p><a href="/">Go back...</a></p>
+                        <p><a href="/leaderboard/">Go back...</a></p>
                     </section>
                 </main>
                 <footer>
