--- a/leaderboard/by_event.html
+++ b/leaderboard/by_event.html
@@ -49,6 +49,9 @@
                             </div>
                         </div>
                     </section>
+                    <section>
+                        <p><a href="/leaderboard/">Go back...</a></p>
+                    </section>
                 </main>
                 <footer>
                     <div id="footer-content">
