--- a/leaderboard/index.html
+++ b/leaderboard/index.html
@@ -93,6 +93,9 @@
                         </div>
                         <p><a href="/leaderboard/by_attendee">Show more...</a></p>
                     </section>
+                    <section>
+                        <p><a href="/">Go back...</a></p>
+                    </section>
                 </main>
                 <footer>
                     <div id="footer-content">
