Move /leaderboard to /leaderboards and update links

--- a/leaderboards/by_event.html
+++ b/leaderboards/by_event.html
@@ -50,7 +50,7 @@
                         </div>
                     </section>
                     <section>
-                        <p><a href="/leaderboard/">Go back...</a></p>
+                        <p><a href="/leaderboards/">Go back...</a></p>
                     </section>
                 </main>
                 <footer>
