--- a/leaderboards/index.html
+++ b/leaderboards/index.html
@@ -51,7 +51,7 @@
                                 <span>9:00 pm - 10:00 pm</span>
                             </div>
                         </div>
-                        <p><a href="/leaderboard/by_event">Show more...</a></p>
+                        <p><a href="/leaderboards/by_event">Show more...</a></p>
                     </section>
                     <section>
                         <h2>Top Clubs</h3>
@@ -73,7 +73,7 @@
                                 <strong>$123.43</strong>
                             </div>
                         </div>
-                        <p><a href="/leaderboard/by_club">Show more...</a></p>
+                        <p><a href="/leaderboards/by_club">Show more...</a></p>
                     </section>
                     <section>
                         <h2>Top Donors</h2>
@@ -91,7 +91,7 @@
                                 <strong>$33.30</strong>
                             </div>
                         </div>
-                        <p><a href="/leaderboard/by_attendee">Show more...</a></p>
+                        <p><a href="/leaderboards/by_attendee">Show more...</a></p>
                     </section>
                     <section>
                         <p><a href="/">Go back...</a></p>
