--- a/leaderboards/by_attendee.html
+++ b/leaderboards/by_attendee.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Club Leaderboard - Charity unVigil Donation Tracker</title>
+        <title>Attendee Leaderboard - Charity unVigil Donation Tracker</title>
         <link rel="stylesheet" href="/static/main.css">
     </head>
     <body>
@@ -30,28 +30,24 @@
                         </p>
                     </section>
                     <section class="pad-bottom">
-                        <h1>Club Leaderboard</h1>
+                        <h1>Attendee Leaderboard</h1>
                         <div class="multi-table">
                             <div class="multi-row">
-                                <span><a href="/clubs/unigames">Unigames</a></span>
+                                <span>Michael Jackson</span>
                                 <strong>$1234.56</strong>
                             </div>
                             <div class="multi-row">
-                                <span><a href="/clubs/unisfa">Unisfa</a></span>
-                                <strong>$675.45</strong>
+                                <span>Dame Judy Dench</span>
+                                <strong>$74.12</strong>
                             </div>
                             <div class="multi-row">
-                                <span><a href="/clubs/ucc">UCC</a></span>
-                                <strong>$435.30</strong>
-                            </div>
-                            <div class="multi-row">
-                                <span><a href="/clubs/pcs">PCS</a></span>
-                                <strong>$123.43</strong>
+                                <span>Cathy Freeman</span>
+                                <strong>$33.30</strong>
                             </div>
                         </div>
                     </section>
                     <section>
-                        <p><a href="/leaderboard/">Go back...</a></p>
+                        <p><a href="/leaderboards/">Go back...</a></p>
                     </section>
                 </main>
                 <footer>
