--- a/attendee/profile.html
+++ b/attendee/profile.html
@@ -32,7 +32,7 @@
                     <section class="club-title">
                         <h1>Welcome, <em id="my-short-name">James</em></h1>
                         <p><strong>Current balance:</strong> $20.00</p>
-                        <p><strong>Donated so far:</strong> $12.00</p>
+                        <p><strong>Donated so far:</strong> $17.00</p>
                         <div class="right pad-bottom">
                             <a href="/pay"><button class="button-good">Add balance</button></a>
                             <a href="/donate"><button class="button-good">Donate now!</button></a>
@@ -47,7 +47,7 @@
                             </div>
                             <div class="multi-row">
                                 <a href="/events/screencheat">Screencheat</a>
-                                <strong>$2.00</strong>
+                                <strong>$7.00</strong>
                             </div>
                         </div>
                     </section>
@@ -64,9 +64,14 @@
                                 <strong>$10.00</strong>
                                 <em>donation</em>
                             </div>
+                            <div class="multi-row">
+                                <span>21:06 - <em>Screencheat</em></span>
+                                <strong>$5.00</strong>
+                                <em>donation</em>
+                            </div>
                             <div class="multi-row payment-row">
                                 <span>21:00 - <em>Add balance</em></span>
-                                <strong>$32.00</strong>
+                                <strong>$37.00</strong>
                                 <em>payment</em>
                         </div>
                     </section>
