Link donation page to payment page

--- a/donate.html
+++ b/donate.html
@@ -31,6 +31,9 @@
                     </section>
                     <section class="pad-bottom">
                         <h1>Donate to an Event</h1>
+                        <p>
+                            <em>Don't have enough balance? <a href="/pay">Add more here.</a></em>
+                        </p>
                         <form method="post">
                             <div class="pad-bottom">
                                 <label for="event-selector">Event:</label>
